infra/grafana/networking/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: grafana
spec:
  parentRefs:
  - name: grafana-gateway
    namespace: grafana
  hostnames:
  - "grafana.k3s.internal.darak.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: grafana
        port: 80
